# data

./: .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tox.ini
.azure-pipelines/: azure-pipelines.yml  ci-windows.yml  ci.yml  create-hashinfo-pull-requests  ruff-validation.py  update-hashinfo  update-package-version
.github/workflows/: codeql.yml
dials_data/: __init__.py  cli.py  datasets.py  download.py
dials_data/definitions/: MyD88_processed.yml  SSX_CuNiR_images.yml  centroid_test_data.yml  dlsnxs2cbf.yml  ed_scaling.yml  image_examples.yml  indexing_test_data.yml  insulin_processed.yml  integration_test_data.yml  isis_sxd_example_data.yml  l_cysteine_dials_output.yml  lysozyme_JF16M_4img.yml  misc_regression.yml  mpro_x0692.yml  pycbf.yml  sacla_mpccd_phase3.yml  ssx_CuNiR_test_data.yml  thaumatin_eiger_screen.yml  thaumatin_grid_scan.yml  vmxi_proteinase_k_sweeps.yml  vmxi_thaumatin.yml  x4wide.yml  x4wide_processed.yml
dials_data/hashinfo/: dials_for_ed.yml  i04_eiger_screen.yml  smv_image_examples.yml  trypsin_multi_lattice.yml
tests/: test_dials_data.py  test_yaml_files.py
